support framer-motion

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 const currentYear = new Date().getFullYear();
 ---
 
-<footer data-animate style="--stagger:0" class="mt-16">
+<footer class="mt-16">
   <div class="sm:px-8">
     <div class="mx-auto max-w-7xl lg:px-8">
       <div class="border-t border-zinc-100 py-8 dark:border-zinc-700/40">
