--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,4 @@
-<header
-  data-animate
-  style="--stagger:0"
-  class="relative mb-[-116] flex h-[180] flex-col"
->
+<header class="relative mb-[-116] flex h-[180] flex-col">
   <div class="h-16 pt-6">
     <div class="w-full sm:px-8">
       <div class="mx-auto max-w-7xl lg:px-8">
