--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,8 +20,8 @@ import Portrait from '../assets/portrait.jpg';
           >
             <motion.div
               client:load
-              initial={{ opacity: 0, y: 10 }}
-              animate={{ opacity: 1, y: 0 }}
+              initial={{ opacity: 0, x: 10 }}
+              animate={{ opacity: 1, x: 0 }}
               transition={{ duration: 0.5 }}
             >
               <div class="lg:pl-20">
@@ -39,8 +39,8 @@ import Portrait from '../assets/portrait.jpg';
             <div class="lg:order-first lg:row-span-2">
               <motion.div
                 client:load
-                initial={{ opacity: 0, y: 10 }}
-                animate={{ opacity: 1, y: 0 }}
+                initial={{ opacity: 0, x: -10 }}
+                animate={{ opacity: 1, x: 0 }}
                 transition={{ duration: 0.5 }}
               >
                 <h1
