--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,9 +45,18 @@ import Portrait from '../assets/portrait.jpg';
                 transition={{ duration: 0.5 }}
               >
                 <h1
-                  class="bg-gradient-to-r from-cyan-500 to-blue-500 bg-clip-text py-3 font-['Hubot_Sans'] text-4xl font-bold tracking-tight text-transparent sm:text-5xl"
+                  class="py-3 font-['Hubot_Sans'] text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl"
                 >
-                  Hello humans, my name is Long Nhat Nguyen
+                  <span
+                    class="bg-gradient-to-br from-amber-300 via-orange-500 to-yellow-400 bg-clip-text text-transparent"
+                  >
+                    Hello humans,
+                  </span> my name is
+                  <span
+                    class="bg-gradient-to-bl from-blue-300 via-sky-500 to-cyan-400 bg-clip-text text-transparent"
+                  >
+                    Long Nhat Nguyen
+                  </span>
                 </h1>
                 <div
                   class="mt-6 space-y-7 text-base text-zinc-600 dark:text-zinc-400"
