only use astro-icon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,7 +86,7 @@ import Portrait from '../assets/portrait.jpg';
                     href="https://github.com/torn4dom4n"
                   >
                     <Icon
-                      name="simple-icons:github"
+                      name="tabler:brand-github"
                       class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#333] dark:hover:text-[#f5f5f5]"
                     />
                   </a>
@@ -98,7 +98,7 @@ import Portrait from '../assets/portrait.jpg';
                     href="https://www.youtube.com/@torn4dom4n"
                   >
                     <Icon
-                      name="simple-icons:youtube"
+                      name="tabler:brand-youtube"
                       class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#ff0000]"
                     />
                   </a>
@@ -110,7 +110,7 @@ import Portrait from '../assets/portrait.jpg';
                     href="https://facebook.com/torn4dom4n"
                   >
                     <Icon
-                      name="simple-icons:facebook"
+                      name="tabler:brand-facebook"
                       class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#1877f2]"
                     />
                   </a>
@@ -122,7 +122,7 @@ import Portrait from '../assets/portrait.jpg';
                     href="https://instagram.com/torn4dom4n"
                   >
                     <Icon
-                      name="simple-icons:instagram"
+                      name="tabler:brand-instagram"
                       class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#fd1d1d]"
                     />
                   </a>
@@ -134,7 +134,7 @@ import Portrait from '../assets/portrait.jpg';
                     href="https://twitter.com/torn4dom4n"
                   >
                     <Icon
-                      name="simple-icons:twitter"
+                      name="tabler:brand-twitter"
                       class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#1da1f2]"
                     />
                   </a>
@@ -146,7 +146,7 @@ import Portrait from '../assets/portrait.jpg';
                     href="https://linkedin.com/in/torn4dom4n"
                   >
                     <Icon
-                      name="simple-icons:linkedin"
+                      name="tabler:brand-linkedin"
                       class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#0a66c2]"
                     />
                   </a>
@@ -158,7 +158,7 @@ import Portrait from '../assets/portrait.jpg';
                     href="https://reddit.com/user/torn4dom4n"
                   >
                     <Icon
-                      name="simple-icons:reddit"
+                      name="tabler:brand-reddit"
                       class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#ff4500]"
                     />
                   </a>
@@ -170,7 +170,7 @@ import Portrait from '../assets/portrait.jpg';
                     href="https://pinterest.com/torn4dom4n"
                   >
                     <Icon
-                      name="simple-icons:pinterest"
+                      name="tabler:brand-pinterest"
                       class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#e60023]"
                     />
                   </a>
@@ -182,7 +182,7 @@ import Portrait from '../assets/portrait.jpg';
                     href="https://soundcloud.com/torn4dom4n"
                   >
                     <Icon
-                      name="simple-icons:soundcloud"
+                      name="tabler:brand-soundcloud"
                       class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#ff8800]"
                     />
                   </a>
