--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,3 +1,7 @@
+---
+import { Icon } from 'astro-icon';
+---
+
 <header class="relative mb-[-116] flex h-[180] flex-col">
   <div class="h-16 pt-6">
     <div class="w-full sm:px-8">
@@ -14,32 +18,16 @@
                   aria-label="Toggle dark mode"
                   class="border-1 group rounded-full bg-white/90 p-3 shadow-lg shadow-zinc-800/5 ring-1 ring-zinc-900/5 backdrop-blur transition dark:bg-zinc-800/90 dark:ring-white/10"
                 >
-                  <svg
-                    viewBox="0 0 256 256"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
+                  <Icon
+                    name="ph:sun"
                     aria-hidden="true"
-                    class="h-6 w-6 fill-amber-500 stroke-amber-600 transition duration-200 dark:hidden [@media(prefers-color-scheme:dark)]:fill-amber-500 [@media(prefers-color-scheme:dark)]:stroke-amber-600"
-                  >
-                    <path
-                      d="M120,40V16a8,8,0,0,1,16,0V40a8,8,0,0,1-16,0Zm8,24a64,64,0,1,0,64,64A64.07,64.07,0,0,0,128,64ZM58.34,69.66A8,8,0,0,0,69.66,58.34l-16-16A8,8,0,0,0,42.34,53.66Zm0,116.68-16,16a8,8,0,0,0,11.32,11.32l16-16a8,8,0,0,0-11.32-11.32ZM192,72a8,8,0,0,0,5.66-2.34l16-16a8,8,0,0,0-11.32-11.32l-16,16A8,8,0,0,0,192,72Zm5.66,114.34a8,8,0,0,0-11.32,11.32l16,16a8,8,0,0,0,11.32-11.32ZM48,128a8,8,0,0,0-8-8H16a8,8,0,0,0,0,16H40A8,8,0,0,0,48,128Zm80,80a8,8,0,0,0-8,8v24a8,8,0,0,0,16,0V216A8,8,0,0,0,128,208Zm112-88H216a8,8,0,0,0,0,16h24a8,8,0,0,0,0-16Z"
-                    >
-                    </path>
-                  </svg>
-                  <svg
-                    viewBox="0 0 256 256"
+                    class="h-6 w-6 stroke-amber-600 text-amber-500 transition duration-200 dark:hidden [@media(prefers-color-scheme:dark)]:stroke-amber-600 [@media(prefers-color-scheme:dark)]:text-amber-500"
+                  />
+                  <Icon
+                    name="ph:moon-stars"
                     aria-hidden="true"
-                    class="hidden h-6 w-6 fill-zinc-50 stroke-zinc-100 transition duration-200 dark:block [@media_not_(prefers-color-scheme:dark)]:fill-amber-500 [@media_not_(prefers-color-scheme:dark)]:stroke-amber-600"
-                  >
-                    <path
-                      d="M235.54,150.21a104.84,104.84,0,0,1-37,52.91A104,104,0,0,1,32,120,103.09,103.09,0,0,1,52.88,57.48a104.84,104.84,0,0,1,52.91-37,8,8,0,0,1,10,10,88.08,88.08,0,0,0,109.8,109.8,8,8,0,0,1,10,10Z"
-                      stroke-width="1.5"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    >
-                    </path>
-                  </svg>
+                    class="hidden h-6 w-6 stroke-zinc-100 text-zinc-50 transition duration-200 dark:block [@media_not_(prefers-color-scheme:dark)]:stroke-amber-600 [@media_not_(prefers-color-scheme:dark)]:text-amber-500"
+                  />
                 </button>
               </div>
             </div>
