--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,12 +19,12 @@ import { Icon } from 'astro-icon';
                   class="border-1 group rounded-full bg-white/90 p-3 shadow-lg shadow-zinc-800/5 ring-1 ring-zinc-900/5 backdrop-blur transition dark:bg-zinc-800/90 dark:ring-white/10"
                 >
                   <Icon
-                    name="ph:sun"
+                    name="ph:sun-bold"
                     aria-hidden="true"
                     class="h-6 w-6 stroke-amber-600 text-amber-500 transition duration-200 dark:hidden [@media(prefers-color-scheme:dark)]:stroke-amber-600 [@media(prefers-color-scheme:dark)]:text-amber-500"
                   />
                   <Icon
-                    name="ph:moon-stars"
+                    name="ph:moon-stars-bold"
                     aria-hidden="true"
                     class="hidden h-6 w-6 stroke-zinc-100 text-zinc-50 transition duration-200 dark:block [@media_not_(prefers-color-scheme:dark)]:stroke-amber-600 [@media_not_(prefers-color-scheme:dark)]:text-amber-500"
                   />
