--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -10,7 +10,7 @@ interface Props {
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
 if (Astro.props.ogImage === undefined) {
-  Astro.props.ogImage = new URL('og.svg', Astro.url);
+  Astro.props.ogImage = new URL('og-image.jpg', Astro.url);
 }
 
 const { title, description, ogImage } = Astro.props;
