--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,8 @@
 import { motion } from 'framer-motion';
 import { Image } from 'astro:assets';
 import { Icon } from 'astro-icon';
-
-import BaseLayout from '../layouts/BaseLayout.astro';
-
-import Portrait from '../assets/portrait.jpg';
+import BaseLayout from '@layouts/BaseLayout.astro';
+import Portrait from '@assets/portrait.jpg';
 ---
 
 <BaseLayout
