chore: update website

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,6 @@
 ---
+import BaseLayout from '@/layouts/BaseLayout.astro';
 import { motion } from 'framer-motion';
-import BaseLayout from '@layouts/BaseLayout.astro';
 ---
 
 <BaseLayout title="Not Found" description="404 Error — this page was not found">
