--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import Portrait from '@assets/portrait.jpg';
-import BaseLayout from '@layouts/BaseLayout.astro';
+import Portrait from '@/assets/portrait.jpg';
+import BaseLayout from '@/layouts/BaseLayout.astro';
 import { Icon } from 'astro-icon';
 import { Image } from 'astro:assets';
 import { motion } from 'framer-motion';
