--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
-import MainHead from '@components/MainHead.astro';
-import Header from '@components/Header.astro';
-import Footer from '@components/Footer.astro';
+import Footer from '@/components/Footer.astro';
+import Header from '@/components/Header.astro';
+import MainHead from '@/components/MainHead.astro';
 
 interface Props {
   title?: string | undefined;
