--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,8 @@
 
 @font-face {
   font-family: 'Mona Sans';
-  src: url('/fonts/Mona-Sans.woff2') format('woff2 supports variations'),
+  src:
+    url('/fonts/Mona-Sans.woff2') format('woff2 supports variations'),
     url('/fonts/Mona-Sans.woff2') format('woff2-variations');
   font-weight: 200 900;
   font-stretch: 75% 125%;
@@ -13,7 +14,8 @@
 
 @font-face {
   font-family: 'Hubot Sans';
-  src: url('/fonts/Hubot-Sans.woff2') format('woff2 supports variations'),
+  src:
+    url('/fonts/Hubot-Sans.woff2') format('woff2 supports variations'),
     url('/fonts/Hubot-Sans.woff2') format('woff2-variations');
   font-weight: 200 900;
   font-stretch: 75% 125%;
