--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -39,25 +39,23 @@ import { Icon } from 'astro-icon';
 </header>
 
 <script is:inline>
-// On page load or when changing themes, best to add inline in `head` to avoid FOUC
-if (
-  localStorage.theme === 'dark' ||
-  (!('theme' in localStorage) &&
-    window.matchMedia('(prefers-color-scheme: dark)').matches)
-) {
-  document.documentElement.classList.add('dark');
-} else {
-  document.documentElement.classList.remove('dark');
-}
+  const theme = (() => {
+    if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
+      return localStorage.getItem('theme');
+    }
+    if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+      return 'dark';
+    }
+    return 'light';
+  })();
 
-// Whenever the user explicitly chooses light mode
-localStorage.theme = 'light';
+  if (theme === 'light') {
+    document.documentElement.classList.remove('dark');
+  } else {
+    document.documentElement.classList.add('dark');
+  }
 
-// Whenever the user explicitly chooses dark mode
-localStorage.theme = 'dark';
-
-// Whenever the user explicitly chooses to respect the OS preference
-localStorage.removeItem('theme');
+  window.localStorage.setItem('theme', theme);
 </script>
 
 <script>
